tests/fixtures/NlbAutoscalingEcsService.template.json
{
  "Resources": {
    "NlbAutoscalingEcsServiceErrorTopic919F3701": {
      "Type": "AWS::SNS::Topic",
      "Properties": {
        "DisplayName": "NlbAutoscalingEcsServiceErrorTopic"
      }
    },
    "AutoscalingEcsVpcE1C9A87D": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/Vpc"
          }
        ]
      }
    },
    "AutoscalingEcsVpcPublicSubnet1Subnet0E9D1C37": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "AutoscalingEcsVpcE1C9A87D"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/Vpc/PublicSubnet1"
          }
        ]
      }
    },
    "AutoscalingEcsVpcPublicSubnet1RouteTableE33CE318": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "AutoscalingEcsVpcE1C9A87D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/Vpc/PublicSubnet1"
          }
        ]
      }
    },
    "AutoscalingEcsVpcPublicSubnet1RouteTableAssociation8E51148B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "AutoscalingEcsVpcPublicSubnet1RouteTableE33CE318"
        },
        "SubnetId": {
          "Ref": "AutoscalingEcsVpcPublicSubnet1Subnet0E9D1C37"
        }
      }
    },
    "AutoscalingEcsVpcPublicSubnet1DefaultRouteF551E42E": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "AutoscalingEcsVpcPublicSubnet1RouteTableE33CE318"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "AutoscalingEcsVpcIGWF6A06F4B"
        }
      },
      "DependsOn": ["AutoscalingEcsVpcVPCGWF1FD80F0"]
    },
    "AutoscalingEcsVpcPublicSubnet1EIP0B2F04E2": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/Vpc/PublicSubnet1"
          }
        ]
      }
    },
    "AutoscalingEcsVpcPublicSubnet1NATGateway0BD71ABF": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "AutoscalingEcsVpcPublicSubnet1Subnet0E9D1C37"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "AutoscalingEcsVpcPublicSubnet1EIP0B2F04E2",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/Vpc/PublicSubnet1"
          }
        ]
      }
    },
    "AutoscalingEcsVpcPublicSubnet2Subnet8ED15042": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "AutoscalingEcsVpcE1C9A87D"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/Vpc/PublicSubnet2"
          }
        ]
      }
    },
    "AutoscalingEcsVpcPublicSubnet2RouteTable940AFAB4": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "AutoscalingEcsVpcE1C9A87D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/Vpc/PublicSubnet2"
          }
        ]
      }
    },
    "AutoscalingEcsVpcPublicSubnet2RouteTableAssociation647618A9": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "AutoscalingEcsVpcPublicSubnet2RouteTable940AFAB4"
        },
        "SubnetId": {
          "Ref": "AutoscalingEcsVpcPublicSubnet2Subnet8ED15042"
        }
      }
    },
    "AutoscalingEcsVpcPublicSubnet2DefaultRouteEA3CEB6D": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "AutoscalingEcsVpcPublicSubnet2RouteTable940AFAB4"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "AutoscalingEcsVpcIGWF6A06F4B"
        }
      },
      "DependsOn": ["AutoscalingEcsVpcVPCGWF1FD80F0"]
    },
    "AutoscalingEcsVpcPublicSubnet2EIP44D3380F": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/Vpc/PublicSubnet2"
          }
        ]
      }
    },
    "AutoscalingEcsVpcPublicSubnet2NATGateway3B6BADEC": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "AutoscalingEcsVpcPublicSubnet2Subnet8ED15042"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "AutoscalingEcsVpcPublicSubnet2EIP44D3380F",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/Vpc/PublicSubnet2"
          }
        ]
      }
    },
    "AutoscalingEcsVpcPrivateSubnet1Subnet87F43741": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "AutoscalingEcsVpcE1C9A87D"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/Vpc/PrivateSubnet1"
          }
        ]
      }
    },
    "AutoscalingEcsVpcPrivateSubnet1RouteTableE6F951E8": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "AutoscalingEcsVpcE1C9A87D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/Vpc/PrivateSubnet1"
          }
        ]
      }
    },
    "AutoscalingEcsVpcPrivateSubnet1RouteTableAssociation6DBD6906": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "AutoscalingEcsVpcPrivateSubnet1RouteTableE6F951E8"
        },
        "SubnetId": {
          "Ref": "AutoscalingEcsVpcPrivateSubnet1Subnet87F43741"
        }
      }
    },
    "AutoscalingEcsVpcPrivateSubnet1DefaultRouteA68519C8": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "AutoscalingEcsVpcPrivateSubnet1RouteTableE6F951E8"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "AutoscalingEcsVpcPublicSubnet1NATGateway0BD71ABF"
        }
      }
    },
    "AutoscalingEcsVpcPrivateSubnet2Subnet57142116": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "AutoscalingEcsVpcE1C9A87D"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/Vpc/PrivateSubnet2"
          }
        ]
      }
    },
    "AutoscalingEcsVpcPrivateSubnet2RouteTable5BC8F409": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "AutoscalingEcsVpcE1C9A87D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/Vpc/PrivateSubnet2"
          }
        ]
      }
    },
    "AutoscalingEcsVpcPrivateSubnet2RouteTableAssociation43A7C43D": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "AutoscalingEcsVpcPrivateSubnet2RouteTable5BC8F409"
        },
        "SubnetId": {
          "Ref": "AutoscalingEcsVpcPrivateSubnet2Subnet57142116"
        }
      }
    },
    "AutoscalingEcsVpcPrivateSubnet2DefaultRoute2103FA65": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "AutoscalingEcsVpcPrivateSubnet2RouteTable5BC8F409"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "AutoscalingEcsVpcPublicSubnet2NATGateway3B6BADEC"
        }
      }
    },
    "AutoscalingEcsVpcIGWF6A06F4B": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/Vpc"
          }
        ]
      }
    },
    "AutoscalingEcsVpcVPCGWF1FD80F0": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "AutoscalingEcsVpcE1C9A87D"
        },
        "InternetGatewayId": {
          "Ref": "AutoscalingEcsVpcIGWF6A06F4B"
        }
      }
    },
    "AutoscalingEcsEcsClusterE559A4EB": {
      "Type": "AWS::ECS::Cluster"
    },
    "AutoscalingEcsEcsCluster9FB782D0": {
      "Type": "AWS::ECS::ClusterCapacityProviderAssociations",
      "Properties": {
        "CapacityProviders": [
          {
            "Ref": "AutoscalingEcsAsgCapacityProvider149E18E7"
          }
        ],
        "Cluster": {
          "Ref": "AutoscalingEcsEcsClusterE559A4EB"
        },
        "DefaultCapacityProviderStrategy": []
      }
    },
    "AutoscalingEcsAutoScalingGroupInstanceSecurityGroup9B940DE3": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NlbAutoscalingEcsService/AutoscalingEcs/AutoScalingGroup/InstanceSecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/AutoScalingGroup"
          }
        ],
        "VpcId": {
          "Ref": "AutoscalingEcsVpcE1C9A87D"
        }
      }
    },
    "AutoscalingEcsAutoScalingGroupInstanceRole9D644FA1": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": {
                  "Fn::Join": [
                    "",
                    [
                      "ec2.",
                      {
                        "Ref": "AWS::URLSuffix"
                      }
                    ]
                  ]
                }
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/AutoScalingGroup"
          }
        ]
      }
    },
    "AutoscalingEcsAutoScalingGroupInstanceRoleDefaultPolicyC4F426E4": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ecs:DeregisterContainerInstance",
                "ecs:RegisterContainerInstance",
                "ecs:Submit*"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": ["AutoscalingEcsEcsClusterE559A4EB", "Arn"]
              }
            },
            {
              "Action": ["ecs:Poll", "ecs:StartTelemetrySession"],
              "Condition": {
                "ArnEquals": {
                  "ecs:cluster": {
                    "Fn::GetAtt": ["AutoscalingEcsEcsClusterE559A4EB", "Arn"]
                  }
                }
              },
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "ecs:DiscoverPollEndpoint",
                "ecr:GetAuthorizationToken",
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": "*"
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "AutoscalingEcsAutoScalingGroupInstanceRoleDefaultPolicyC4F426E4",
        "Roles": [
          {
            "Ref": "AutoscalingEcsAutoScalingGroupInstanceRole9D644FA1"
          }
        ]
      }
    },
    "AutoscalingEcsAutoScalingGroupInstanceProfileCB715A8B": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Roles": [
          {
            "Ref": "AutoscalingEcsAutoScalingGroupInstanceRole9D644FA1"
          }
        ]
      }
    },
    "AutoscalingEcsAutoScalingGroupLaunchConfig30C65F4B": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "ImageId": {
          "Ref": "SsmParameterValueawsserviceecsoptimizedamiamazonlinux2recommendedimageidC96584B6F00A464EAD1953AFF4B05118Parameter"
        },
        "InstanceType": "t2.micro",
        "IamInstanceProfile": {
          "Ref": "AutoscalingEcsAutoScalingGroupInstanceProfileCB715A8B"
        },
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "AutoscalingEcsAutoScalingGroupInstanceSecurityGroup9B940DE3",
              "GroupId"
            ]
          }
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "",
              [
                "#!/bin/bash\necho ECS_CLUSTER=",
                {
                  "Ref": "AutoscalingEcsEcsClusterE559A4EB"
                },
                " >> /etc/ecs/ecs.config\nsudo iptables --insert FORWARD 1 --in-interface docker+ --destination 169.254.169.254/32 --jump DROP\nsudo service iptables save\necho ECS_AWSVPC_BLOCK_IMDS=true >> /etc/ecs/ecs.config"
              ]
            ]
          }
        }
      },
      "DependsOn": [
        "AutoscalingEcsAutoScalingGroupInstanceRoleDefaultPolicyC4F426E4",
        "AutoscalingEcsAutoScalingGroupInstanceRole9D644FA1"
      ]
    },
    "AutoscalingEcsAutoScalingGroupASG68FDC093": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "MaxSize": "1",
        "MinSize": "1",
        "LaunchConfigurationName": {
          "Ref": "AutoscalingEcsAutoScalingGroupLaunchConfig30C65F4B"
        },
        "NewInstancesProtectedFromScaleIn": true,
        "Tags": [
          {
            "Key": "Name",
            "PropagateAtLaunch": true,
            "Value": "NlbAutoscalingEcsService/AutoscalingEcs/AutoScalingGroup"
          }
        ],
        "VPCZoneIdentifier": [
          {
            "Ref": "AutoscalingEcsVpcPrivateSubnet1Subnet87F43741"
          },
          {
            "Ref": "AutoscalingEcsVpcPrivateSubnet2Subnet57142116"
          }
        ]
      },
      "UpdatePolicy": {
        "AutoScalingScheduledAction": {
          "IgnoreUnmodifiedGroupSizeProperties": true
        }
      }
    },
    "AutoscalingEcsAsgCapacityProvider149E18E7": {
      "Type": "AWS::ECS::CapacityProvider",
      "Properties": {
        "AutoScalingGroupProvider": {
          "AutoScalingGroupArn": {
            "Ref": "AutoscalingEcsAutoScalingGroupASG68FDC093"
          },
          "ManagedScaling": {
            "Status": "ENABLED",
            "TargetCapacity": 100
          },
          "ManagedTerminationProtection": "ENABLED"
        }
      }
    },
    "Ec2ServiceLB381329CE": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false"
          }
        ],
        "Scheme": "internet-facing",
        "Subnets": [
          {
            "Ref": "AutoscalingEcsVpcPublicSubnet1Subnet0E9D1C37"
          },
          {
            "Ref": "AutoscalingEcsVpcPublicSubnet2Subnet8ED15042"
          }
        ],
        "Type": "network"
      },
      "DependsOn": [
        "AutoscalingEcsVpcPublicSubnet1DefaultRouteF551E42E",
        "AutoscalingEcsVpcPublicSubnet2DefaultRouteEA3CEB6D"
      ]
    },
    "Ec2ServiceLBPublicListenerA941070C": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "Ec2ServiceLBPublicListenerECSGroup3DC8690E"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "Ec2ServiceLB381329CE"
        },
        "Port": 80,
        "Protocol": "TCP"
      }
    },
    "Ec2ServiceLBPublicListenerECSGroup3DC8690E": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "TCP",
        "TargetType": "instance",
        "VpcId": {
          "Ref": "AutoscalingEcsVpcE1C9A87D"
        }
      }
    },
    "Ec2ServiceTaskDefTaskRole27A5D642": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "Ec2ServiceTaskDef8D94BAA3": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Essential": true,
            "Image": "amazon/amazon-ecs-sample",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "Ec2ServiceTaskDefwebLogGroup923CD0CD"
                },
                "awslogs-stream-prefix": "Ec2Service",
                "awslogs-region": {
                  "Ref": "AWS::Region"
                }
              }
            },
            "Memory": 512,
            "Name": "web",
            "PortMappings": [
              {
                "ContainerPort": 80,
                "HostPort": 0,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "ExecutionRoleArn": {
          "Fn::GetAtt": ["Ec2ServiceTaskDefExecutionRole0B89ED3C", "Arn"]
        },
        "Family": "NlbAutoscalingEcsServiceEc2ServiceTaskDefC2E0FBDC",
        "NetworkMode": "bridge",
        "RequiresCompatibilities": ["EC2"],
        "TaskRoleArn": {
          "Fn::GetAtt": ["Ec2ServiceTaskDefTaskRole27A5D642", "Arn"]
        }
      }
    },
    "Ec2ServiceTaskDefwebLogGroup923CD0CD": {
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "Ec2ServiceTaskDefExecutionRole0B89ED3C": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "Ec2ServiceTaskDefExecutionRoleDefaultPolicy7E1456F8": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": ["logs:CreateLogStream", "logs:PutLogEvents"],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": ["Ec2ServiceTaskDefwebLogGroup923CD0CD", "Arn"]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "Ec2ServiceTaskDefExecutionRoleDefaultPolicy7E1456F8",
        "Roles": [
          {
            "Ref": "Ec2ServiceTaskDefExecutionRole0B89ED3C"
          }
        ]
      }
    },
    "Ec2Service398F0E46": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "AutoscalingEcsEcsClusterE559A4EB"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "EC2",
        "LoadBalancers": [
          {
            "ContainerName": "web",
            "ContainerPort": 80,
            "TargetGroupArn": {
              "Ref": "Ec2ServiceLBPublicListenerECSGroup3DC8690E"
            }
          }
        ],
        "SchedulingStrategy": "REPLICA",
        "TaskDefinition": {
          "Ref": "Ec2ServiceTaskDef8D94BAA3"
        }
      },
      "DependsOn": [
        "Ec2ServiceLBPublicListenerECSGroup3DC8690E",
        "Ec2ServiceLBPublicListenerA941070C"
      ]
    }
  },
  "Parameters": {
    "SsmParameterValueawsserviceecsoptimizedamiamazonlinux2recommendedimageidC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
      "Default": "/aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id"
    }
  },
  "Outputs": {
    "Ec2ServiceLoadBalancerDNS6983C9B2": {
      "Value": {
        "Fn::GetAtt": ["Ec2ServiceLB381329CE", "DNSName"]
      }
    },
    "LoadBalancerDNS": {
      "Value": {
        "Fn::GetAtt": ["Ec2ServiceLB381329CE", "DNSName"]
      }
    }
  }
}
